fluent-syntax/test/fixtures_behavior/variant_with_leading_space_in_name.ftl
key = {
        *[  one] Foo
    }
//~ ERROR E0004, pos 18, args "a-zA-Z_"
